<resources>
    <string name="failure_title">Failure</string>
    <string name="app_name">My Todo</string>
    <string name="edit_project">Edit project</string>
    <string name="delete_project">Delete project</string>
    <string name="title_activity_edit_project">Edit project</string>
    <string name="Project_name">Project name</string>

    <string name="action_add_project">Add project</string>
    <string name="action_search">Search</string>
    <string name="action_back">Back</string>
    <string name="action_save_todo">Save todo</string>
    <string name="no_todo_items">No todo items found</string>
    <string name="action_add_status">Add status</string>
    <string name="position">Position</string>
    <!-- Generic -->
    <string name="title_confirmation">Confirmation</string>
    <string name="title_cancel_edit">Cancel edit?</string>
    <string name="title_cancel_confirm">Cancel edit and don\'t apply changed</string>
    <string name="title_do_not_cancel">Don\'t cancel edit</string>
    <!-- To do -->
    <string name="title_activity_todo">Todo items</string>
    <string name="title_activity_edit_todo">Edit a todo</string>

    <string name="delete_todo_question">Delete todo item?</string>
    <string name="delete_todo">Delete todo item</string>
    <string name="header_todo_title">Title</string>
    <string name="header_todo_status">Status</string>
    <string name="header_todo_start">Start</string>
    <string name="header_todo_end">End</string>

    <string name="label_todo_title">Title:</string>
    <string name="label_todo_status">Status:</string>
    <string name="label_todo_comment">Comment:</string>
    <string name="label_start_date">Should start on:</string>
    <string name="label_end_date">Should finish on:</string>
    <string name="err_end_before_start_date">Finish date can be empty or must be later than the start date</string>
    <string name="err_title_empty">Title is empty</string>
    <string name="warning_start_date_invalid">Invalid start date</string>
    <string name="warning_end_date_invalid">Invalid finish date</string>
    <string name="menu_add_todo">Add todo</string>
    <!-- Project -->
    <string name="title_main">Projects</string>
    <string name="no_project">No projects found. Please add one or more project first and than add todo items.</string>
    <string name="Start_adding_todo">Save project and start adding todo\'s</string>
    <string name="cant_delete_has_todo">Can\'t delete project because it has todo items </string>
    <string name="head_title_finished">F</string>
    <string name="head_title_active">A</string>
    <string name="head_title_wait">W</string>
    <string name="ERR_PROJECT_NAME_EMPTY">Project name can\'t be empty</string>

    <!-- Status -->

    <string name="label_action_type">Action type</string>
    <string name="action_save_status">Save status</string>
    <string name="action_delete_status">Delete status</string>
    <string name="status_description">Status description</string>
    <string name="action_status">Status</string>
    <string name="title_activity_edit_status">Edit status</string>
    <string name="title_activity_status">Status maintenance</string>
    <string name="warning_status_description_mandatory">Description is mandatory</string>
    <string name="warning_position_number_mandatory">Position must be a positive number and is mandatory.</string>
    <string name="warning_cant_delete_status_used">Can\'t delete status because it\'s already used.</string>
    <string name="ask_delete_status">Delete this status?</string>
    <string name="is_status_active">Is status active?</string>
    <string name="status_active">Act.</string>
    <string name="label_is_default">Is default when adding new todo</string>
    <string name="warning_status_no_default_not_active">Status can\'t be a default status when it\'s not active</string>
    <!-- Generic -->
    <string name="help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="title_delete">Confirm deletion</string>
    <string name="keep">Keep</string>
    <string name="delete">Delete</string>
    <!-- Action types -->
    <string name="at_not_started">Not yet started</string>
    <string name="at_started">Started</string>
    <string name="at_not_active">Not active</string>
    <string name="at_removed">Removed</string>
    <string name="at_finished">Finished</string>
    <string name="title_settings">Settings</string>
    <string name="label_dateFormat">Date format:</string>
    <string name="label_separator">Separator</string>
    <string name="opt_minus">Minus sign (\'-\')</string>
    <string name="opt_slash">Slash sign (\'/\')</string>
    <string name="opt_dot">Dot sign (\'.\')</string>
    <string name="opt_date_dmy">DD-MM-YYYY</string>
    <string name="opt_date_mdy">MM-DD-YYYY</string>
    <string name="opt_date_ymd">YYYY-MM-DD</string>
    <string name="menu_save_settings">Save settings</string>

    <!--- Show to do -->
    <string name="show_edit_todo">Edit todo</string>
    <string name="title_show_todo">Todo details</string>

    <!-- filter settings -->
    <string name="choose_status">Or filter on status:</string>
    <string name="choose_date_status">Filter on dates?</string>
    <string name="img_filter">Open filter settings</string>
    <string name="filter_notInclude">Don\'t check</string>
    <string name="filter_afterEndDate">Include when later than \"end date\"</string>
    <string name="filter_afterStartDate">Include after \"start date\"</string>
    <string name="sel_in_filter">In filter</string>
    <string name="sel_not_in_filter">Not in filter</string>
    <string name="filter_label">Display filter:</string>
    <string-array name="filter_type">
        <item>in filter</item>
        <item>not in filter</item>
    </string-array>
    <!-- filter types -->
    <string name="ft_all">All todo\'s</string>
    <plurals name="ft_num_found">
        <item quantity="zero">Found no todo\'s, %2$d filtered out</item>
        <item quantity="one">Found one todo, %2$d filtered out</item>
        <item quantity="other">Found %1$d todo\'s, %2$d filtered out</item>

    </plurals>
    <string name="add_filter">Add filter</string>
    <string name="no_filters_found">No filters found</string>
    <string name="menu_todo_filters">Todo filters</string>
    <string name="title_todo_filters">Todo filters</string>
    <string name="menu_save_filter">Save filer</string>
    <string name="menu_delete_filter">Delete filter</string>
    <string name="label_filter_name">Filter name</string>
    <string name="title_delete_filter">Delete filter</string>
    <string name="err_filter_name">Filter name empty</string>
    <string name="menu_edit_filter">Edit filter</string>
    <!-- Date Settings   -->
    <string name="menu_date_settings">Date settings</string>
</resources>
