...
            style="@style/showLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_todo_title" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>

        <TextView
            android:id="@+id/textView14"
...
        style="@style/showLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_todo_comment" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
         />

</LinearLayout>
...
