<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.elaya.mytodo.todo.TodoActivity"    >
    <item
        android:id="@+id/back"
        android:title="@string/action_back"
        android:icon="@drawable/back"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/add_todo"
        android:title="@string/menu_add_todo"
        android:icon="@drawable/add"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/search"
        android:title="@string/action_search"
        android:icon="@drawable/search"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/help"
        android:title="@string/help"
        android:icon="@drawable/help"
        app:showAsAction="always"
        />
</menu>