<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/back"
        android:title="@string/action_back"
        android:icon="@drawable/back"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/edit"
        android:title="@string/show_edit_todo"
        android:icon="@drawable/edit"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/help"
        android:title="@string/help"
        android:icon="@drawable/help"
        app:showAsAction="always"
        />
</menu>